Fix for https://bugs.webkit.org/show_bug.cgi?id=29696 ([CHROMIUM] Paths fail to render in SVG with large viewbox)

Revert the relevant parts of r47925, and implement an alternate
fix (localize the coordinate check to GraphicsContext::clipPath()).
See http://crbug.com/21174.

Reviewed by Eric Seidel.

Covered by LayoutTests/svg/dynamic-updates/SVGClipPathElement-dom-clipPathUnits-attr.html.

* platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContext::clipPath):
* platform/graphics/skia/PlatformContextSkia.cpp:
(PlatformContextSkia::currentPathInLocalCoordinates):



Canonical link: https://commits.webkit.org/40289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48726 268f45cc-cd09-0410-ab3c-d52691b4dbfc